--- a/aboutus/aboutus.css
+++ b/aboutus/aboutus.css
@@ -1,79 +1,81 @@
-
-
-
-.banner{
-    object-fit: cover;
-    height: 400px;
-    width: 100%;
+.banner {
+  object-fit: cover;
+  height: 550px;
+  width: 100%;
 }
 
-.container{
-    margin: 2rem 1rem;
-    display: inline-flex;
-    height: 400px;
+.container {
+  margin: 2rem 1rem;
+  display: inline-flex;
+  height: 400px;
 }
 
-.image4{
-    margin-top: 20px;
-    margin-left: 20px;
-    object-fit: cover;
-    width: 50%;
-    background: #000;
-    float: left;
+.image4 {
+  margin-top: 20px;
+  margin-left: 20px;
+  object-fit: cover;
+  width: 50%;
+  background: #000;
+  float: left;
 }
 
-
-.text{
-    margin-top: 20px;
-    margin-left: 4rem;
-    width: 40%;
-    padding: 70px 0;
-    float: right;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
+.text {
+  margin-top: 20px;
+  margin-left: 4rem;
+  width: 40%;
+  padding: 70px 0;
+  float: right;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
 }
 
-.whySmart{
-    padding: 10px;
-    height: 40%;
-    width: 100%;
-    text-align: center;
-    margin: 2rem 1rem;
+.whySmart {
+  padding: 10px;
+  height: 40%;
+  width: 100%;
+  text-align: center;
+  margin: 2rem 1rem;
 }
 
-
-.bubble{
-    height: 270px;
-    width: 270px;
-    background-color: rgba(201, 210, 96, 1);
-    border-radius: 50%;
-    display: inline-block;
-    margin: 1rem 5.5rem;
+.bubble {
+  height: 270px;
+  width: 270px;
+  background-color: rgba(201, 210, 96, 1);
+  border-radius: 50%;
+  display: inline-block;
+  margin: 1rem 5.5rem;
 }
 
-.slidecontainer{
-    padding: 70px 0;
-    text-align: center;
+.slidecontainer {
+  padding: 70px 0;
+  text-align: center;
 }
 
-.slideshow{
-    height: 500px;
-    width: 80%;
-    object-fit: cover;
-
+.slideshow {
+  height: 500px;
+  width: 80%;
+  object-fit: cover;
 }
 
-.foot{
-    margin-top: 2rem;
-    display: flex;
-    flex-direction: column;
-    border-top: 1px black solid;
-    padding-left: 15px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-  }
-  
-  .footer_nav{
-    padding-bottom: 4px;
-    font-weight: bold;
-  }
+.foot {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  border-top: 1px black solid;
+  padding-left: 15px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.footer_nav {
+  padding-bottom: 4px;
+  font-weight: bold;
+}
+
+.why {
+    width:100%;
+}
+
+.why img {
+    width:80%;
+}
